fix z-index

--- a/starter-kit/src/scss/pc/pages/_index.scss
+++ b/starter-kit/src/scss/pc/pages/_index.scss
@@ -208,6 +208,7 @@ body{
 .toStore{
     display: none;
     @include absolute(282px, '', '', 10px);
+    z-index: index($zIndex, "social");
 }
 
 .toStore_badge{
